# Phase-1

./: README.md  cli.py  main.py  models.py  pyproject.toml  service.py  storage.py  test_cli.py
.claude/: settings.local.json
.claude/agents/: todo-app-dev.md
.specify/: agent-context.md
.specify/memory/: constitution.md  plan.md  specification.md  task.md
history/prompts/1-todo-app/: 001-todo-app-implementation-complete.green.prompt.md
history/prompts/constitution/: 1-create-initial-constitution.constitution.prompt.md
history/prompts/todo-app/: 2-create-todo-app-spec.spec.prompt.md  3-create-impl-plan.plan.prompt.md  4-create-tasks.tasks.prompt.md
specs/1-todo-app/: spec.md  tasks.md
specs/1-todo-app/checklists/: requirements.md
specs/1-todo-app/impl/: data-model.md  plan.md  quickstart.md  research.md
specs/1-todo-app/impl/contracts/: service-contracts.md
src/phase_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
